# Druckwelle

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CreateProjectFiles.bat  CreateProjectFiles.sh  Druckwelle.sublime-project  Druckwelle.sublime-workspace  GenerateLibAndInc.bat  Makefile  NuGet.config  README.md  RefreshProjectFiles.bat  RefreshProjectFiles.sh  cmake_install.cmake  index.html  params.json
src/: CMakeLists.txt  DruckwelleWMS.sublime-project  GetCapabilities.xml  Makefile  WebMapService.cpp  WebMapService.h  WebMapTileService.cpp  WebMapTileService.h  WebServer.cpp  WebServer.h  cmake_install.cmake  dwcore.cpp  dwcore.h  main.cpp
src/layers/: CircleTestLayer.cpp  ExampleLayer.cpp  OSMSDF.cpp  QualityElevation.cpp  TileCache.cpp
src/utils/: Capabilities.cpp  Capabilities.h  Elevation.cpp  Elevation.h  Filesystem.h  ImageProcessor.cpp  ImageProcessor.h  Polysplit.cpp  Quadtree.h  ReadZIP.cpp  ReadZIP.h
src/utils/HTTP/: HTTP.cpp  HTTP.h  HTTPRequest.h
src/utils/VectorTiles/: VectorTiles.cpp  VectorTiles.h  vector_tile.pb.cc  vector_tile.pb.h
test/: CMakeLists.txt  TestElevationCompression.cpp  TestSDFRasterizer.cpp  main.cpp
